[tool.poetry]
name = "montpy"
version = "0.1.1"
description = "Library implementing Monte Carlo and Quasi-Monte Carlo methods for integral evaluation"
authors = ["Pietro Zanotta <zanottapietro1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
